--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Condensed:wght@400;600&display=swap" rel="stylesheet">   
-    <script src="javascript/splide.js"></script> 
+    <script src="js/splide.js"></script> 
     
     <link rel="stylesheet" href="css/style.css">
 </head>    
@@ -68,6 +68,6 @@
         </div> 
     </div>
 <div id="background-square"></div>  
-<script src="textanimation.js"></script>       
+<script src="js/textanimation.js"></script>       
 </body>    
 </html>
