--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="js/splide.js"></script> 
     
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/splide.css">
 </head>    
 <body>
     <div id="wrapper" class="splide">
